infra/modules/security_group/ecs_sg.tf
# * ==============================================================================
# | ECS FARGATE CONTAINER SECURITY GROUP
# * ==============================================================================
resource "aws_security_group" "ecs" {
  name        = "${var.project_name}-${var.environment}-ecs-sg"
  description = "Security group for ECS tasks"
  vpc_id      = var.vpc_id

  tags = merge(
    local.common_tags,
    {
      Name = "${var.project_name}-${var.environment}-ecs-sg"
    }
  )
}
